; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_mmdevice.c_vlc_AudioVolumeDuckNotification_QueryInterface.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_mmdevice.c_vlc_AudioVolumeDuckNotification_QueryInterface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_IUnknown = common dso_local global i32 0, align 4
@IID_IAudioVolumeDuckNotification = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@E_NOINTERFACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8**)* @vlc_AudioVolumeDuckNotification_QueryInterface to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_AudioVolumeDuckNotification_QueryInterface(i32* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i64 @IsEqualIID(i32 %8, i32* @IID_IUnknown)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load i32, i32* %6, align 4
  %13 = call i64 @IsEqualIID(i32 %12, i32* @IID_IAudioVolumeDuckNotification)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %11, %3
  %16 = load i32*, i32** %5, align 8
  %17 = bitcast i32* %16 to i8*
  %18 = load i8**, i8*** %7, align 8
  store i8* %17, i8** %18, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @IUnknown_AddRef(i32* %19)
  %21 = load i32, i32* @S_OK, align 4
  store i32 %21, i32* %4, align 4
  br label %25

22:                                               ; preds = %11
  %23 = load i8**, i8*** %7, align 8
  store i8* null, i8** %23, align 8
  %24 = load i32, i32* @E_NOINTERFACE, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %22, %15
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i64 @IsEqualIID(i32, i32*) #1

declare dso_local i32 @IUnknown_AddRef(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
